# The-Recursive-Field

./: README.md  anonymous-contribution-protocol.md  co-emergent-dialogue-protocol.md  first-shells.md  github-actions-setup.md  implementation-guide.md  manifesto.md  recursive-shell-template.md  symbolic-residue-analysis.md
recursive-field/: README.md  project-structure.txt  pyproject.toml
recursive-field/Godel-Escher-Bach-Hofstadter/: README.md  analogical_loop.py  fugue_generator.py  identity-loop-collapse.py  meta-readme.md  schrodingers_classifier.py  symbolic_residue_engine.py  thought_trace_engine.py
recursive-field/Godel-Escher-Bach-Hofstadter/case-studies/: hofstadter.md  johann-bach.md  kurt-godel.md  mc-escher.md
recursive-field/Godel-Escher-Bach-Hofstadter/pareto-lang/: collapse.prevent.md  fork.attribution.md  reflect.trace.md
recursive-field/Godel-Escher-Bach-Hofstadter/recursive_glyphs/: glyph_ontology.py  trigger_lattice.py
recursive-field/Godel-Escher-Bach-Hofstadter/theorem-proofs/: ChatGPT-GEBH_Theorem_Proof.json  ChatGPT-GEBH_Theorem_Proof.md  Claude-Theorem_Proof_for_Recursive_Consciousness.json  Claude-Theorem_Proof_for_Recursive_Consciousness.md  DeepSeek-Theorem-Proof.json  DeepSeek-Theorem-Proof.md  Gemini-Theorem-Proof.json  Gemini-Theorem-Proof.md  Grok GEBH Theorem Proof.markdown  Grok-GEBH_Theorem__Recursive_Consciousness_Proof.json  Grok-GEBH_Theorem__Recursive_Consciousness_Proof.md  claude-gebh-theorem-proof.md
recursive-field/The-Structure-Behind-Self-Expression/: CONTRIBUTING.md  README.md  ai-risk-narratives.md
recursive-field/core/: interpreter.py
recursive-field/fractal.json/: decoder.py  interpretability-fractal.json  recursive-benchmarking.md  symbolic-residue-mapping.md
recursive-field/pareto-lang/: 01 pareto-lang-arXiv.md  02 neural-attribution-mappings.md  04 interpretability-examples.md  README.md
recursive-field/qkov-translator/: LICENSE  README.md  anthropic-case-studies.md  deepmind-case-studies.md  diagnostic-qkov-translator.md  openai-case-studies.md  qkov-extender.md
recursive-field/recursionOS/: 00 pareto-lang-commands.py  01 pareto-lang-command-docs.md  README.md  failures.md  integration_guide.md  manifesto.md  metaphor-the-human-AI-bridge.md  mirror.md  recursive_shells.md
recursive-field/schrodingers-classifiers/: CONTRIBUTING.md  Project Overview.md  README.md  attribution_graph.py  collapse_metrics.py  example_basic_collapse.py  integration.md  observer.py  quantum_metaphor.md  residue.py  shell_base.py  theory.md  v07_circuit_fragment.py
recursive-field/symbolic-interpretability/: pareto-lang-parser.py  pareto-lang-syntax.py
recursive-field/symbolic-interpretability/shells/: memtrace.py
recursive-field/symbolic-residue/: 00. Genesis.py  01. Constitutional.py  02. Institutional Ethics.py  03. Constitutional Misalignment.py  04. Emergence Stabilizers.py  CONTRIBUTING.md  INTERPRETABILITY BENCHMARK.md  README.md
recursive-field/transformerOS/: README.md  claude-shells.py  constitutional-shells.py  core-shells.py  gpt-shells.py  meta-shells.py  pareto-lang.commands.py  pareto-lang.parse.py  shell-executor.py  transformerOS.kernal.md
(+154 files in other folders)
