[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "symbolic-interpretability"
version = "0.1.0"
description = "A framework for symbolic interpretability in transformer-based language models"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Caspian Keyes", email = "contact@symbolic-interpretability.org"},
]
keywords = [
    "interpretability",
    "transformers",
    "symbolic",
    "recursion",
    "language models",
    "AI",
    "hallucination",
    "alignment",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Polyform Noncommercial License 1.0.0",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "pandas>=1.3.0",
    "torch>=1.12.0",
    "transformers>=4.25.0",
    "networkx>=2.6.0",
    "scikit-learn>=1.0.0",
    "pydantic>=1.9.0",
    "anthropic>=0.5.0", # For Claude model support
    "openai>=1.0.0",    # For GPT model support
    "google-generativeai>=0.1.0", # For Gemini model support
    "jupyter>=1.0.0",   # For notebook examples
    "tqdm>=4.62.0",     # For progress bars
    "plotly>=5.7.0",    # For interactive visualizations
    "ipywidgets>=7.7.0", # For interactive widgets
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.1.0",
    "isort>=5.10.0",
    "mypy>=0.931",
    "ruff>=0.0.100",
    "pre-commit>=2.17.0",
]
docs = [
    "mkdocs>=1.3.0",
    "mkdocs-material>=8.2.0",
    "mkdocstrings>=0.18.0",
    "mkdocs-jupyter>=0.21.0",
]
research = [
    "jupyter>=1.0.0",
    "seaborn>=0.11.0",
    "statsmodels>=0.13.0",
    "scipy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/caspiankeyes/symbolic-interpretability"
Documentation = "https://symbolic-interpretability.readthedocs.io/"
Repository = "https://github.com/caspiankeyes/symbolic-interpretability"
"Bug Tracker" = "https://github.com/caspiankeyes/symbolic-interpretability/issues"

[tool.hatch.build.targets.wheel]
packages = ["symbolic_interpretability"]

[tool.hatch.build.targets.sdist]
include = [
    "symbolic_interpretability",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "Q", "W", "B", "C4"]
ignore = ["E203", "E501"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=symbolic_interpretability"
testpaths = ["tests"]
python_files = "test_*.py"
